--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <section class="flex-container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="flex-container__circle flex-container__circle_top"></div>
+            <div class="flex-container__circle flex-container__circle_middle"></div>
+            <div class="flex-container__circle flex-container__circle_bottom"></div>
+            <div class="flex-container__circle flex-container__circle_middle"></div>
+            <div class="flex-container__circle flex-container__circle_top"></div>
         </section>
     </body>
 </html>
